# waycal

./: .gitignore  README.md  catalog-info.yaml  flake.nix
backend/: pyproject.toml  waycal_fetch.py
docs/: _config.yml  getting-started.md  index.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
examples/: config.toml  niri-config.kdl
frontend/: AgendaWidget.qml  CalendarService.qml  EventCard.qml  EventList.qml  GogModel.qml  MailOverlay.qml  MailRow.qml  MailService.qml  MailWidget.qml  MonthDashboard.qml  MonthGrid.qml  OverlayWindow.qml  StatusBanner.qml  TaskRow.qml  TasksOverlay.qml  TasksService.qml  TasksWidget.qml  Theme.qml  WidgetWindow.qml  qmldir  shell.qml
matugen/: Theme.qml.tmpl
modules/: home-manager.nix
nix/: package.nix
